--- a/iwcs_service_biz/pom.xml
+++ b/iwcs_service_biz/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>com.wisdom</groupId>
-            <artifactId>iwcs-modules-core</artifactId>
+            <artifactId>iwcs-service-core</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
