--- a/iwcs_webservice/pom.xml
+++ b/iwcs_webservice/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>wisdom-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.wisdom</groupId>
+            <artifactId>wisdom-base</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
