--- a/iwcs_service_core/pom.xml
+++ b/iwcs_service_core/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>iwcs-modules-core</artifactId>
+    <artifactId>iwcs-service-core</artifactId>
 
     <dependencies>
         <dependency>
