--- a/iwcs_webservice/src/main/resources/application-devted.yml
+++ b/iwcs_webservice/src/main/resources/application-devted.yml
@@ -119,6 +119,12 @@ application:
     noticeOutstockProcess: true
     allowHandOutstockSupplyCall: true
     forceKeepOutstockProcess: true
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: admin
+    password: 123456
+    virtualHost: /
 
 
 mybatis:
