--- a/wisdom_common/pom.xml
+++ b/wisdom_common/pom.xml
@@ -18,6 +18,12 @@
             <artifactId>wisdom-base</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!-- rabbitmq -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>1.5.2.RELEASE</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
