--- a/iwcs_webservice/src/main/resources/application-prddev.yml
+++ b/iwcs_webservice/src/main/resources/application-prddev.yml
@@ -119,6 +119,12 @@ application:
     noticeOutstockProcess: true
     allowHandOutstockSupplyCall: true
     forceKeepOutstockProcess: true
+  rabbitmq:
+    host: 192.168.102.138
+    port: 15672
+    username: guest
+    password: guest
+    virtualHost: /
 
 
 mybatis:
