--- a/iwcs_webservice/src/main/resources/application-devted.yml
+++ b/iwcs_webservice/src/main/resources/application-devted.yml
@@ -120,10 +120,10 @@ application:
     allowHandOutstockSupplyCall: true
     forceKeepOutstockProcess: true
   rabbitmq:
-    host: 127.0.0.1
-    port: 5672
-    username: admin
-    password: 123456
+    host: 192.168.102.138
+    port: 15672
+    username: guest
+    password: guest
     virtualHost: /
 
 
