--- a/iwcs_webservice/src/main/resources/application-prddev.yml
+++ b/iwcs_webservice/src/main/resources/application-prddev.yml
@@ -55,8 +55,8 @@ liquibase:
   enabled: true
 
 server:
-  port: 8088
-  address: localhost
+  port: 8080
+  address: 192.168.1.106
   tomcat:
     maxHttpHeaderSize: 66665536
 management:
