--- a/iwcs_webservice/src/main/resources/application-prddev.yml
+++ b/iwcs_webservice/src/main/resources/application-prddev.yml
@@ -55,8 +55,8 @@ liquibase:
   enabled: true
 
 server:
-  port: 8080
-  address: localhost
+  port: 8088
+  address: 192.168.1.105
   tomcat:
     maxHttpHeaderSize: 66665536
 management:
@@ -113,6 +113,7 @@ application:
     genAgvSchedulingTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/genAgvSchedulingTask
     continueTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/continueTask
     cancelTaskUrl: http://192.168.102.99/rcs/services/rest/hikRpcService/cancelTask
+    returnMapOrPodUrl: http://192.168.102.99/rcs/services/rest/hikRpcService/queryPodBerthAndMat
     tokenCode: 09bd3456991fe1cf2e185de92fa5aab5
     clientCode: INSPUR
   outstock:
