--- a/iwcs_webservice/src/main/resources/application-prddev.yml
+++ b/iwcs_webservice/src/main/resources/application-prddev.yml
@@ -56,7 +56,7 @@ liquibase:
 
 server:
   port: 8088
-  address: 192.168.1.105
+  address: localhost
   tomcat:
     maxHttpHeaderSize: 66665536
 management:
