--- a/pom.xml
+++ b/pom.xml
@@ -426,6 +426,12 @@
         </dependency>
 
         <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.6.Final</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.wisdom</groupId>
             <artifactId>license-manage</artifactId>
             <version>1.0.0</version>
