--- a/iwcs_webservice/src/main/resources/application-devted.yml
+++ b/iwcs_webservice/src/main/resources/application-devted.yml
@@ -113,6 +113,8 @@ application:
     genAgvSchedulingTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/genAgvSchedulingTask
     continueTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/continueTask
     cancelTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/cancelTask
+    returnMapOrPodUrl: http://192.168.102.97/rcs/services/rest/hikRpcService/queryPodBerthAndMat
+    returnTaskStatus:  http://192.168.102.99/rcs/services/rest/hikRpcService/queryTaskStatus
     tokenCode: dc9293d5bc047d238e0e439fbb5556c5
     clientCode: IWCS
   outstock:
