--- a/iwcs_webservice/src/main/resources/application-prddev.yml
+++ b/iwcs_webservice/src/main/resources/application-prddev.yml
@@ -121,8 +121,9 @@ application:
     genAgvSchedulingTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/genAgvSchedulingTask
     continueTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/continueTask
     cancelTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/cancelTask
-    returnMapOrPodUrl: http://192.168.102.97/rcs/services/rest/hikRpcService/queryPodBerthAndMat
-    returnTaskStatus:  http://192.168.102.97/rcs/services/rest/hikRpcService/queryTaskStatus
+    returnMapOrPodUrl: http://192.168.102.99/rcs/services/rest/hikRpcService/queryPodBerthAndMat
+    returnTaskStatus:  http://192.168.102.99/rcs/services/rest/hikRpcService/queryTaskStatus
+    finiTask:  http://192.168.102.99/rcs/services/rest/liftService/finiTask
     tokenCode: 09bd3456991fe1cf2e185de92fa5aab5
     clientCode: INSPUR
   outstock:
@@ -135,6 +136,8 @@ application:
     username: tony
     password: tony
     virtualHost: /
+  warn:
+    checkName: name1;name2
 
 
 mybatis:
