--- a/iwcs_webservice/src/main/resources/application-prddev.yml
+++ b/iwcs_webservice/src/main/resources/application-prddev.yml
@@ -153,3 +153,6 @@ socketIO:
     secret: 0550224055e1848081dba46d8ad325f503fa141b
     tokenValidityInSeconds: 86400
     tokenValidityInSecondsForRememberMe: 86400
+plc:
+  elevatorUrl: http://192.168.89.1
+  lineUrl: http://192.168.89.1
