--- a/iwcs_webservice/src/main/resources/application-prddev.yml
+++ b/iwcs_webservice/src/main/resources/application-prddev.yml
@@ -11,7 +11,7 @@ spring:
   datasource:
     druid:
       name: default
-      url: jdbc:mysql://${mysql.host}:${mysql.port}/iwcs_prd_dev?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&allowMultiQueries=true
+      url: jdbc:mysql://${mysql.host}:${mysql.port}/iwcs_us_inspur?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&allowMultiQueries=true
       username: root
       password: root
       type: com.alibaba.druid.pool.DruidDataSource
@@ -112,11 +112,11 @@ application:
   wbcode:
     openWbCode: true
   netty:
-    lineClientHost: 192.168.102.97
+    lineClientHost: 192.168.102.95
     lineClientPort: 9234
-    elevatorClientHost: 192.168.102.97
+    elevatorClientHost: 192.168.102.95
     elevatorClientPort: 9234
-    nettyServerHost: 192.168.102.97
+    nettyServerHost: 192.168.102.95
     nettyServerPort: 9234
   hikParam:
     returnPodUrl: http://192.168.102.100/rcs/services/rest/hikTpsService/returnPod
@@ -127,9 +127,9 @@ application:
     genAgvSchedulingTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/genAgvSchedulingTask
     continueTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/continueTask
     cancelTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/cancelTask
-    returnMapOrPodUrl: http://192.168.102.97/rcs/services/rest/hikRpcService/queryPodBerthAndMat
-    returnTaskStatus:  http://192.168.102.97/rcs/services/rest/hikRpcService/queryTaskStatus
-    finiTask:  http://192.168.102.97/rcs/services/rest/hikLiftService/finiTask
+    returnMapOrPodUrl: http://192.168.102.95/rcs/services/rest/hikRpcService/queryPodBerthAndMat
+    returnTaskStatus:  http://192.168.102.95/rcs/services/rest/hikRpcService/queryTaskStatus
+    finiTask:  http://192.168.102.95/rcs/services/rest/hikLiftService/finiTask
     tokenCode: 09bd3456991fe1cf2e185de92fa5aab5
     clientCode: INSPUR
   outstock:
@@ -137,7 +137,7 @@ application:
     allowHandOutstockSupplyCall: true
     forceKeepOutstockProcess: true
   rabbitmq:
-    host: 192.168.102.97
+    host: 192.168.102.95
     port: 5672
     username: admin
     password: admin
