'修改pda升级存储路径'

--- a/iwcs_webservice/src/main/resources/application-prddev.yml
+++ b/iwcs_webservice/src/main/resources/application-prddev.yml
@@ -150,7 +150,8 @@ application:
     virtualHost: /
   warn:
     checkName: name1;name2
-
+  downPda:
+    url: http://192.168.102.95:8088
 
 mybatis:
   type-handlers-package: org.apache.ibatis.type.LocalDateTypeHandler
