--- a/iwcs_webservice/src/main/resources/application-chaoyue.yml
+++ b/iwcs_webservice/src/main/resources/application-chaoyue.yml
@@ -143,7 +143,8 @@ application:
     virtualHost: /
   warn:
     checkName: name1;name2
-
+  downPda:
+    url: http://192.168.102.96:8088
 
 mybatis:
   type-handlers-package: org.apache.ibatis.type.LocalDateTypeHandler
