--- a/iwcs_webservice/src/main/resources/application-prddev.yml
+++ b/iwcs_webservice/src/main/resources/application-prddev.yml
@@ -132,7 +132,8 @@ application:
     movePodUrl: http://192.168.102.100/rcs/services/rest/hikTpsService/genMoveTaskByPod
     genAgvSchedulingTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/genAgvSchedulingTask
     continueTaskUrl: http://192.168.102.95/rcs/services/rest/hikRpcService/continueTask
-    cancelTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/cancelTask
+    cancelTaskUrl: http://192.168.102.95/rcs/services/rest/hikRpcService/cancelTask
+    freeRobotUrl: http://192.168.102.95/rcs/services/rest/hikRpcService/freeRobot
     returnMapOrPodUrl: http://192.168.102.95/rcs/services/rest/hikRpcService/queryPodBerthAndMat
     returnTaskStatus:  http://192.168.102.95/rcs/services/rest/hikRpcService/queryTaskStatus
     finiTask:  http://192.168.102.95/rcs/services/rest/hikLiftService/finiTask
