--- a/iwcs_webservice/src/main/resources/application-usinspur.yml
+++ b/iwcs_webservice/src/main/resources/application-usinspur.yml
@@ -133,6 +133,7 @@ application:
     genAgvSchedulingTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/genAgvSchedulingTask
     continueTaskUrl: http://10.180.245.169/rcs/services/rest/hikRpcService/continueTask
     cancelTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/cancelTask
+    freeRobotUrl: http://10.180.245.169/rcs/services/rest/hikRpcService/freeRobot
     returnMapOrPodUrl: http://10.180.245.169/rcs/services/rest/hikRpcService/queryPodBerthAndMat
     returnTaskStatus:  http://10.180.245.169/rcs/services/rest/hikRpcService/queryTaskStatus
     finiTask:  http://10.180.245.169/rcs/services/rest/hikLiftService/finiTask
