--- a/iwcs_webservice/src/main/resources/application-chaoyue.yml
+++ b/iwcs_webservice/src/main/resources/application-chaoyue.yml
@@ -54,6 +54,9 @@ spring:
         acknowledge-mode: manual #采用手动应答, 开启ACK
         concurrency: 1 #指定最小的消费者数量
         max-concurrency: 1 #指定最大的消费者数量
+    #国际化配置
+    messages:
+      basename: static/i18n/messages
 
 
 liquibase:
@@ -146,6 +149,8 @@ application:
     checkName: name1;name2
   downPda:
     url: http://192.168.102.96:8088
+  lang:
+    currentLang: zh_CN
 
 mybatis:
   type-handlers-package: org.apache.ibatis.type.LocalDateTypeHandler
