--- a/iwcs_webservice/src/main/resources/application-chaoyue1.yml
+++ b/iwcs_webservice/src/main/resources/application-chaoyue1.yml
@@ -54,6 +54,9 @@ spring:
         acknowledge-mode: manual #采用手动应答, 开启ACK
         concurrency: 1 #指定最小的消费者数量
         max-concurrency: 1 #指定最大的消费者数量
+    #国际化配置
+    messages:
+      basename: static/i18n/messages
 
 
 liquibase:
@@ -145,6 +148,8 @@ application:
     checkName: name1;name2
   downPda:
     url: http://10.50.4.11:8888
+  lang:
+    currentLang: zh_CN
 
 mybatis:
   type-handlers-package: org.apache.ibatis.type.LocalDateTypeHandler
