--- a/iwcs_webservice/src/main/resources/application-usinspur.yml
+++ b/iwcs_webservice/src/main/resources/application-usinspur.yml
@@ -56,6 +56,9 @@ spring:
         acknowledge-mode: manual #采用手动应答, 开启ACK
         concurrency: 1 #指定最小的消费者数量
         max-concurrency: 1 #指定最大的消费者数量
+  #国际化配置
+  messages:
+    basename: static/i18n/messages
 
 
 liquibase:
@@ -150,6 +153,8 @@ application:
     virtualHost: /
   warn:
     checkName: name1;name2
+  lang:
+    currentLang: en_US
 
 
 mybatis:
