前端实时监控socket

--- a/wisdom_common/pom.xml
+++ b/wisdom_common/pom.xml
@@ -18,7 +18,11 @@
             <artifactId>wisdom-base</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
 
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
