--- a/iwcs_webservice/src/main/resources/application-changchun.yml
+++ b/iwcs_webservice/src/main/resources/application-changchun.yml
@@ -2,16 +2,14 @@
 mysql:
   #    host: localhost
   #    port: 3306
-  host: 192.168.0.101
-  port: 3306
-#  qinghengHost: 58.56.21.226
-#  qinghengPort: 8835
+  host: 192.168.102.136
+  port: 32768
 
 spring:
   datasource:
     druid:
       name: default
-      url: jdbc:mysql://${mysql.host}:${mysql.port}/inspur?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&allowMultiQueries=true
+      url: jdbc:mysql://${mysql.host}:${mysql.port}/iwcs_changchun?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&allowMultiQueries=true
       username: root
       password: root
       type: com.alibaba.druid.pool.DruidDataSource
@@ -56,6 +54,9 @@ spring:
         acknowledge-mode: manual #采用手动应答, 开启ACK
         concurrency: 1 #指定最小的消费者数量
         max-concurrency: 1 #指定最大的消费者数量
+  #国际化配置
+  messages:
+    basename: static/i18n/messages
 
 
 liquibase:
@@ -63,7 +64,7 @@ liquibase:
   enabled: true
 
 server:
-  port: 8888
+  port: 8088
   tomcat:
     maxHttpHeaderSize: 66665536
 management:
@@ -119,32 +120,37 @@ application:
     nettyServerHost: 192.168.102.97
     nettyServerPort: 9234
   hikParam:
-    returnPodUrl: http://192.168.102.100/rcs/services/rest/hikTpsService/returnPod
-    getOutPodUrl: http://192.168.102.100/rcs/services/rest/hikTpsService/getOutPod
-    endTaskUrl: http://192.168.102.100/rcs/services/rest/hikTpsService/endAllTasksByTps
-    rotatePodUrl: http://192.168.102.100/rcs/services/rest/hikTpsService/rotatePodByTps
-    movePodUrl: http://192.168.102.100/rcs/services/rest/hikTpsService/genMoveTaskByPod
-    genAgvSchedulingTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/genAgvSchedulingTask
-    continueTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/continueTask
-    cancelTaskUrl: http://192.168.102.100/rcs/services/rest/hikRpcService/cancelTask
-    returnMapOrPodUrl: http://192.168.0.101/rcs/services/rest/hikRpcService/queryPodBerthAndMat
-    returnTaskStatus:  http://192.168.0.101/rcs/services/rest/hikRpcService/queryTaskStatus
-    finiTask:  http://192.168.0.101/rcs/services/rest/hikLiftService/finiTask
-    tokenCode: 09bd3456991fe1cf2e185de92fa5aab5
+    returnPodUrl: http://192.168.102.103/cms/services/rest/hikTpsService/returnPod
+    getOutPodUrl: http://192.168.102.103/cms/services/rest/hikTpsService/getOutPod
+    endTaskUrl: http://192.168.102.103/cms/services/rest/hikTpsService/endAllTasksByTps
+    rotatePodUrl: http://192.168.102.103/cms/services/rest/hikTpsService/rotatePodByTps
+    movePodUrl: http://192.168.102.103/cms/services/rest/hikTpsService/genMoveTaskByPod
+    genAgvSchedulingTaskUrl: http://192.168.102.103/cms/services/rest/hikRpcService/genAgvSchedulingTask
+    continueTaskUrl: http://192.168.102.103/cms/services/rest/hikRpcService/continueTask
+    cancelTaskUrl: http://192.168.102.103/cms/services/rest/hikRpcService/cancelTask
+    freeRobotUrl: http://192.168.102.103/cms/services/rest/hikRpcService/freeRobot
+    returnMapOrPodUrl: http://192.168.102.103/cms/services/rest/hikRpcService/queryPodBerthAndMat
+    returnTaskStatus:  http://192.168.102.103/cms/services/rest/hikRpcService/queryTaskStatus
+    finiTask:  http://192.168.102.103/cms/services/rest/hikLiftService/finiTask
+    notifyExcuteResultInfoUrl:  http://192.168.102.103/cms/services/rest/liftCtlService/notifyExcuteResultInfo
+    tokenCode: d2076d0915a5e6985641a7123cf708bc
     clientCode: INSPUR
   outstock:
     noticeOutstockProcess: true
     allowHandOutstockSupplyCall: true
     forceKeepOutstockProcess: true
   rabbitmq:
-    host: 192.168.0.101
+    host: 192.168.102.103
     port: 5672
     username: admin
     password: admin
     virtualHost: /
   warn:
     checkName: name1;name2
-
+  downPda:
+    url: http://192.168.102.103:8088
+  lang:
+    currentLang: zh_CN
 
 mybatis:
   type-handlers-package: org.apache.ibatis.type.LocalDateTypeHandler
